     by a user-defined bounding box.
 - Under rotation filter, allow user to draw a line to indicate what is 'horizontal' - (maybe even
   use 'Shift' key to force a horizontal line, i.e. deltaY = 0) Use the drawn line to calculate a
   finer rotation angle to straighten the page. (maybe name the two filters 'orientation' and 'rotation'
   to distinguish between them).
   -- when I rotate the page, seeing the thumbnail rotated as well.
   -- being able to "arrow down" through the pages quickly, viewing previews.
   -- When I exported to PDF, though, the app exported all the Left images, followed by (most of) the
      "right" images. It should alternate L/R, obviously. Also, I'm getting a white border on the top
      and the left of the images; I don't know if that's intentional or not, but I'd like to be able
      to turn it off.

201306xx; YASW 0.4
 - Fixed Ticket #2 (Image order not retained when project is reloaded.)
 - Fixed Ticket #1 (Display FileName instead of BaseName in the image list)
 - Fixed Ticket #3 (Propagate settings to all images for one side)
 - Added a background color (configurable) for the filter widgets.

20130525; YASW 0.3 "yasw has reached one (1) user!"
 - About dialog
 - open -> recent projects
 - change selection color for dekeystoning and cropping
 - move all corners (dekeystonig, cropping) when pressing "control" while draging one of the corners


20121118; YASW 0.2
 - export to pdf
 - a lot of small fixes in handling to pages types (even/odd)
 - cleaning old code away (only one page type handling)
 - menu for adding/removing images
 - key "delete" deletes an image
 - key "pgup/pgdown" to move image
 - windows port (build on linux with mxe.cc)
 - remove add left/right in favor of one "add", wich defaults to left.

20121006; YASW 0.1
 - First release
 - handling two page types (left/right)
 - Saving / Loading project Settings
 - Exporting project to images
 - Propaging page/image settings to other pages/images
